--- a/3.0.0/apache/php7.0.9/Dockerfile
+++ b/3.0.0/apache/php7.0.9/Dockerfile
@@ -29,7 +29,10 @@ RUN set -xe && \
         # Compile Phalcon
         curl -LO https://github.com/phalcon/cphalcon/archive/v${PHALCON_VERSION}.tar.gz && \
         tar xzf ${PWD}/v${PHALCON_VERSION}.tar.gz && \
-        docker-php-ext-install -j $(getconf _NPROCESSORS_ONLN) ${PWD}/cphalcon-${PHALCON_VERSION}/build/${PHALCON_EXT_PATH} && \
+        docker-php-source extract && \
+        ln -s ${PWD}/cphalcon-${PHALCON_VERSION}/build/${PHALCON_EXT_PATH} /usr/src/php/ext/phalcon && \
+        docker-php-ext-install -j $(getconf _NPROCESSORS_ONLN) phalcon && \
+        docker-php-source delete && \
         # Remove all temp files
         rm -r \
             ${PWD}/v${PHALCON_VERSION}.tar.gz \
